--- a/source/index.html
+++ b/source/index.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="content-type" content="text/html">
+        <script src="https://kit.fontawesome.com/290ec8b56c.js" crossorigin="anonymous"></script>
         <title>Better DND</title>
     </head>
     <body>
